# modern_cpp_playground

./: CMakeLists.txt  LICENSE  bench_readtextfile  perfoff  perfon  rebuildall  rebuildall_clang  rebuildall_coverage
.github/workflows/: t_master.yaml
cpp2/: timer.h2
files/: formap.csv
include/: FP.hpp  aa.h  csv.h
readtextfile/: Makefile  Makefile.bench  bench_readtextfile.cpp  fuzz_map_readtextfile.cpp  fuzz_readtextfile.cpp  test_fp_readtextfile.cpp  test_future_readtextfile.cpp  test_map_readtextfile.cpp  test_readtextfile.cpp
readtextfile/c/: longest.c  longest.cpp  longest_stl.cpp  wordlist.txt
src/: CMakeLists.txt  aa.cpp  csv.cpp  readtextfile.h  readtextfile_tomap.h  timer.cpp  timer_benchmark.cpp
test/: CMakeLists.txt  access1.cpp  access2.cpp  bench_readtextfile.cpp  cons1.cpp  cons2.cpp  cons3.cpp  csv.cpp  csv_map.cpp  csv_map2.cpp  exception_at_pos.cpp  search.cpp  search2.cpp  search3.cpp  search_notfound.cpp  test_readtextfile.cpp  timer.cpp  timer2.cpp  timer2_1.cpp  timer3.cpp  timer3_1.cpp
